2008-02-11  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug: Fixed global variables in typo3/backend.php

2008-02-08  Oliver Hader  <oh@inpublica.de>

	* (trivial) Fixed bug #7458: Wrong alternative text on create new page icon above page tree
	* (minor) Fixed bug #7466: Clear cache actions in top bar cause JS error
	* (minor) Fixed bug #7460: Search field in top bar causes JS error

2008-02-08  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7450 (revisited): further corrections to localization of htmlArea RTE
	* Fixed bug #7468: htmlArea RTE QuickTag plugin refusing to open dialogue in IE

2008-02-08  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.0beta1a

2008-02-07  Ingo Renner  <ingo@typo3.org>

	* fixed bug 7333: Better solution for "Page is being generated", credits Bernhard Kraft and Michael Stucki

2008-02-08  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #7449: Frontend editing fails due to undefined method in t3lib_BEfunc

2008-02-07  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #4588: Frontend htmlArea RTE loads global RTE config instead of function parameter $thisConfig
	* Fixed bug #7450: htmlArea RTE: localization is broken when the RTE is used by a frontend plugin
	* Fixed bug #7451: htmlArea RTE: BE localization is broken

2008-02-07  Benjamin Mack  <mack@xnos.org>

	* Fixed bug #7383: Added option to delete unused marker in parsehtml::substituteMarkerArray (thanks to Steffen Kamper)

2008-02-06  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug: IRRE - Deleted records are added to array of related records

2008-02-06  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7419: htmlArea RTE: Localization error in Remove Format plugin
	* Fixed bug #7421: htmlArea RTE: typographical error in localization file
	* Fixed bug #7052: Permission problem of htmlArea RTE images