@@ -1,3 +1,7 @@
+2008-02-11  Ingo Renner  <ingo@typo3.org>
+
+	* removed legacy code from backend.php
+
 2008-02-11  Oliver Hader  <oh@inpublica.de>
 
 	* (minor) Fixed bug: Fixed global variables in typo3/backend.php
